// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StyledDateRange renders Date inputs correctly when the labels are inline 1`] = `
.c2 .sc-bqGGPW {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 135px;
}

.c0 .c1 {
  width: auto;
  display: inline-block;
  vertical-align: top;
}

.c0 .c1:first-child {
  margin-right: 15px;
}

.c0 .sc-iqAclL {
  width: auto;
}

.c0 .sc-dIsUp {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
</div>
`;

exports[`StyledDateRange renders Date inputs correctly when the labels are not inline 1`] = `
.c2 .sc-bqGGPW {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 135px;
}

.c0 .c1 {
  width: auto;
  display: inline-block;
  vertical-align: bottom;
}

.c0 .c1:first-child {
  margin-right: 15px;
}

.c0 .sc-iqAclL {
  width: auto;
}

.c0 .sc-dIsUp {
  -webkit-flex: auto;
  -ms-flex: auto;
  flex: auto;
}

<div
  className="c0"
>
  <div
    className="c1 c2"
  />
</div>
`;
